--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,15 @@
       <artifactId>spring-orm</artifactId>
       <version>5.3.7</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.2.0.Final</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
